--- a/assignment/index.html
+++ b/assignment/index.html
@@ -7,15 +7,21 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mocha/10.2.0/mocha.min.js" integrity="sha512-jsP/sG70bnt0xNVJt+k9NxQqGYvRrLzWhI+46SSf7oNJeCwdzZlBvoyrAN0zhtVyolGcHNh/9fEgZppG2pH+eA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mocha/10.2.0/mocha.css" integrity="sha512-SjDc34mGAkSBKnNMasz1QPVustFyPQUHUO5wxzGNC5x9wQMcHwDHXCNRYowC/6DsX0lqvpCI1mKiVEQkws2olw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chai/4.3.7/chai.min.js" integrity="sha512-Pwgr3yHn4Gvztp1GKl0ihhAWLZfqgp4/SbMt4HKW7AymuTQODMCNPE7v1uGapTeOoQQ5Hoz367b4seKpx6j7Zg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
+    
     <!-- Create and link a CSS file! -->
-
+    <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
-    <h1>Unit 4, Part 2: HTML/CSS Practice</h1>
-    <p>See console for output. <a href="">Refresh</a> the page to re-run tests.</p>
-
-
+    <header>
+      <h1>Unit 4, Part 2: HTML/CSS Practice</h1>
+      <p>See console for output. <a href="">Refresh</a> the page to re-run tests.</p>
+    </header>
+    
+    <div class="info">
+      <h2>My name is Peder</h2>
+      <img src="../assignment/bike-image-for-unit-4.jpg" alt="It's a bike!">
+      <h3>I travel by bike! Unless its outside of Minneapolis, then it's a car or plane...</h3>
+    </div>
 
     <!-- Used for automated testing -->
     <div id="mocha"></div>
